B-F Backup Sandbox 30.4.12/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>FDC-GD</description>
        <inlineHelpText>Enter Additional Information</inlineHelpText>
        <label>Additional Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(isblank( Birth_Year__c ),&quot;&quot;,TEXT(YEAR(TODAY())- VALUE(  Birth_Year__c  )))</formula>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Year__c</fullName>
        <description>FDC-PLFC</description>
        <label>Birth Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>FDC-GD: Used to evaluate and classify GD contact type</description>
        <formula>CASE(RecordTypeId ,&quot;012S00000000Ta7&quot;, &quot;B-F Contact&quot;,
&quot;012S00000000Ta8&quot;, &quot;Distributor Contact&quot;,&quot;NA&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(ISBLANK(Email ), 0,1) +
IF(ISBLANK(Fax ), 0,1) +
IF(ISBLANK(Phone ), 0,1) +
IF(ISBLANK(MobilePhone ), 0,1) +
IF(ISBLANK(Title ), 0,1)+
IF(ISBLANK( LastName),0,1)+
IF(ISBLANK( Birthdate  ), 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>FDC-GD</description>
        <inlineHelpText>Select Department</inlineHelpText>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing – Sales Off Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <description>FDC-GD</description>
        <inlineHelpText>Enter Extension</inlineHelpText>
        <label>Extension</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Find_Nearby__c</fullName>
        <formula>IF( ISPICKVAL( FN__Mapping_Status__c , &apos;Located&apos;), HYPERLINK( &quot;apex/FN__FindNearbymap?cid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) , HYPERLINK( &quot;apex/FN__CGeoCode?id=&quot; &amp; Id,&quot;Locate Contact&quot;,&quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Find Nearby</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Lat__c</fullName>
        <label>Contact Lat</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Lon__c</fullName>
        <label>Contact Lon</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Address__c</fullName>
        <inlineHelpText>Contact&apos;s Mapping Address</inlineHelpText>
        <label>Contact Mapping Address</label>
        <picklist>
            <picklistValues>
                <fullName>Mailing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Map</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Status__c</fullName>
        <inlineHelpText>Contact&apos;s Mapping Status.</inlineHelpText>
        <label>Contact Mapping Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Located Yet</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Located</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem with Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Google Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Exhausted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>FDC-PLFC</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>FDC-GD</description>
        <inlineHelpText>Select Group</inlineHelpText>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duty Free Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Is_Board_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FDC-PLFC</description>
        <label>Is Board Member?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Family__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FDC-PLFC</description>
        <inlineHelpText>Indicate if the Contact is also a member of the controlling family</inlineHelpText>
        <label>Is Family?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fridge_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fridge Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Independent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FDC-PLFC</description>
        <inlineHelpText>Indicate if the Contact is independent</inlineHelpText>
        <label>Is Independent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate if contact works in a management position</inlineHelpText>
        <label>Is Management?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Other_Non_Independent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Other Non-Independent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KAM_supervising_OPL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the customer /contact is identified and marked  as a person who acts as Opinion leader and has impact on our business than this field stores information about responsible Key Account Manager from BF...</description>
        <inlineHelpText>Please select the Name of responsible Key Account Manager!</inlineHelpText>
        <label>KAM supervising OPL</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <description>FDC-GD</description>
        <inlineHelpText>Select Languages</inlineHelpText>
        <label>Languages</label>
        <picklist>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serbo-Croat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkish</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Code__c</fullName>
        <label>Legacy Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Full_Name__c</fullName>
        <description>FDC-PLFC Db</description>
        <inlineHelpText>This is used for reference to source data only</inlineHelpText>
        <label>Legacy Full Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>FDC - PLFC Database</description>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <description>Nickname</description>
        <label>Nickname</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <description>FDC-GD</description>
        <inlineHelpText>Select Office</inlineHelpText>
        <label>Office</label>
        <picklist>
            <picklistValues>
                <fullName>Australia Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-F Czech &amp; Slovak republics (Dist)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-F Polska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean &amp; DF – Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finlandia Vodka Worldwide Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy Office – Rome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisville Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miami Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panama Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prague Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puerto Rico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Really Good Brands (Distributor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romania</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenure__c</fullName>
        <description>FDC-PLFC</description>
        <formula>IF(isblank(   Year_Joined_Board__c   ),&quot;&quot;,TEXT(YEAR(TODAY())-  VALUE(Year_Joined_Board__c ) ))</formula>
        <label>Tenure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territories__c</fullName>
        <description>FDC-GD</description>
        <inlineHelpText>Enter Territories</inlineHelpText>
        <label>Territories</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>AL Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL GAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL Spirit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disponent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>stellv.  AL Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>stellv.  AL Spirit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>stellv.  BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>stellv.  Disponent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>stellv.  GL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>stellv. HL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>stellv.  MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>stellv.  ML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>stellv.  TL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>stellv.  VL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substitut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VL</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_Joined_Board__c</fullName>
        <description>FDC-PLFC</description>
        <label>Year Joined Board</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Legacy_ID__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Distributor_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.GD_DistributorContact</value>
        </filters>
        <label>All Distributor Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>FDC-GD Managers</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>China_Contact</fullName>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.ADDRESS2_COUNTRY</field>
            <operation>contains</operation>
            <value>中国</value>
        </filters>
        <label>China Contact</label>
        <language>zh_CN</language>
        <sharedTo>
            <group>CHN-All Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PLFC_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Is_Board_Member__c</columns>
        <columns>Age__c</columns>
        <columns>Birth_Year__c</columns>
        <columns>Year_Joined_Board__c</columns>
        <columns>Tenure__c</columns>
        <columns>Is_Family__c</columns>
        <columns>Is_Independent__c</columns>
        <columns>Is_Management__c</columns>
        <columns>Is_Other_Non_Independent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.PLFC_Contact</value>
        </filters>
        <label>PLFC Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>FDC-PLFC Managers</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <namedFilters>
        <fullName>nf_01I300000017Oj1EAE_00NQ0000000zqjtMAA</fullName>
        <active>true</active>
        <field>Promotion__c.Contact__c</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Promotion_Contact</name>
        <sourceObject>Promotion__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IV00000004PhxMAE_00NV0000000KoinMAC</fullName>
        <active>true</active>
        <field>Order__c.Contact__c</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Order_Contact</name>
        <sourceObject>Order__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IV00000004PoZMAU_00NV0000000LuGjMAK</fullName>
        <active>true</active>
        <field>Asset_Move__c.Contact__c</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.New_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Asset Move_Contact</name>
        <sourceObject>Asset_Move__c</sourceObject>
    </namedFilters>
    <recordTypes>
        <fullName>AUD_Contact_Roles</fullName>
        <active>true</active>
        <label>AUD - Contact Roles</label>
    </recordTypes>
    <recordTypes>
        <fullName>GD_DistributorContact</fullName>
        <active>true</active>
        <description>Used fwith Global Directory for Distributor Contacts</description>
        <label>GD-DistributorContact</label>
    </recordTypes>
    <recordTypes>
        <fullName>PLFC_Contact</fullName>
        <active>true</active>
        <description>Used for the PLFC database - officers and board members</description>
        <label>PLFC-Contact</label>
    </recordTypes>
</CustomObject>